<resources>
    <string name="maps_api_key">AIzaSyC0m5BO6QAvs-fWhMtnfv6hug13Hnk9LvY</string>
    <string name="app_name">SmartParking</string>
    <string name="key_is_user_onboarded">is_user_onboarded</string>
    <string name="continue_with_google">Continue with Google</string>

    <!--  Navigation bar string-->
    <string name="navigation_bar_home">Home</string>
    <string name="navigation_bar_my_parking">My Parking</string>
    <string name="navigation_bar_account">Account</string>

    <string name="common_close">Close</string>
    <string name="common_save">Save</string>
    <string name="common_find">Find Parking</string>
    <string name="common_edit">Edit</string>
    <string name="common_delete">Delete</string>
    <string name="common_more">More</string>
    <string name="common_booking">Booking</string>

    <string name="header_account">ACCOUNT</string>
    <string name="header_my_profile">MY PROFILE</string>
    <string name="header_my_vehicle">MY VEHICLE</string>
    <string name="header_add_vehicle">ADD VEHICLE</string>
    <string name="header_edit_vehicle">EDIT VEHICLE</string>
    <string name="header_payment_method">PAYMENT METHOD</string>
    <string name="header_booking">BOOKING</string>
    <string name="header_my_parking">MY PARKING</string>

    <string name="account_sign_in_as">you are signed in as</string>
    <string name="account_sign_out">sign out</string>

    <string name="account_menu_item_profile">MY PROFILE</string>
    <string name="account_menu_item_payment_method">PAYMENT METHOD</string>
    <string name="account_menu_item_vehicle">MY VEHICLE</string>
    <string name="account_add_vehicle">ADD A VEHICLE</string>
    <string name="account_vehicle_empty_body">You currently have no saved vehicles. Add one now to
quickly complete bookings</string>

    <string name="account_profile_form_name_field">Full Name*</string>
    <string name="account_profile_form_email_field">Email Address</string>
    <string name="account_profile_form_phone">Phone Number*</string>

    <string name="vehicle_form_license_plate_number">License Plate Number*</string>
    <string name="vehicle_form_plate_name">Name</string>
    <string name="vehicle_cofirm_add_vehicle">Make sure the vehicle you\'re parking matches your booking or you could be towed</string>

    <string name="payment_method_enter_card_detail">Enter card details</string>
    <string name="payment_method_add_payment_method">Add Payment Method</string>
    
    <string name="home_find_around">Search around here!</string>
    <string name="home_find_parking">Find parking</string>
    <string name="select_time_arrive">Arrive After</string>
    <string name="select_time_after">Exit Before</string>
    
    <string name="booking_reservation_details">Reservation Details</string>
    <string name="booking_select_vehicle">Select Vehicle</string>

    <string name="parking_my_reservation_schedule">My reservation schedule</string>

</resources>