<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.InputType" />

        <import type="android.view.inputmethod.EditorInfo" />

        <variable
            name="viewmodel"
            type="com.example.smartparking.ui.account.paymentmethod.detail.PaymentMethodDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.smartparking.ui.account.paymentmethod.form.PaymentMethodFormFragment">

        <com.example.smartparking.utils.uiwidget.CommonHeader
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headerTitle="@string/header_payment_method"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftIcon="@drawable/ic_back_24"
            app:onLeftButtonClick="@{() -> viewmodel.goBack()}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:background="@color/ui_light"

                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin_padding_16"
                android:paddingVertical="@dimen/margin_padding_8">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TitleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_padding_8"
                    android:text="@string/payment_method_enter_card_detail"
                    android:textAllCaps="true" />

                <com.example.smartparking.ui.widget.EditTextLine
                    android:id="@+id/edtCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:enabled="true"
                    app:imeOption="@{EditorInfo.IME_ACTION_DONE}"
                    app:inputType="@{InputType.TYPE_CLASS_NUMBER}"
                    app:label="Card Number"
                    app:text="@{viewmodel.paymentMethod.cardNumber}" />

                <com.example.smartparking.ui.widget.EditTextLine
                    android:id="@+id/edtExpDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:enabled="true"
                    app:imeOption="@{EditorInfo.IME_ACTION_DONE}"
                    app:inputType="@{InputType.TYPE_CLASS_DATETIME}"
                    app:label="Exp. Date"
                    app:text="@{viewmodel.paymentMethod.expiredDate}" />

                <com.example.smartparking.ui.widget.EditTextLine
                    android:id="@+id/edtCvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:enabled="true"
                    app:imeOption="@{EditorInfo.IME_ACTION_DONE}"
                    app:inputType="@{InputType.TYPE_CLASS_NUMBER}"
                    app:label="CVV"
                    app:text="@{viewmodel.paymentMethod.cvv}" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_padding_12"
                android:text="@string/common_save"
                android:theme="@style/BodyText13Bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>